fixed overflow of auth page

--- a/client/src/components/Auth/login/Login.css
+++ b/client/src/components/Auth/login/Login.css
@@ -34,7 +34,7 @@
 
 /*Login input box styling*/
 .login-input-box {
-  max-width:300px;
+  width:90%;
   height: 35px;
   font-size: 1.3rem;
   margin: auto;
